@@ -1,4 +1,5 @@
 /* Do not edit this file.  It is created by a code generator. */
+// TODO: this has been modified, removed small data
 
 #include "Translator/TypeAliases.h"
 
@@ -102,6 +103,7 @@ TypeAliases::TypeAliases() {
   EBeam.insert( & typeid(Psana::Bld::BldDataEBeamV4));
   EBeam.insert( & typeid(Psana::Bld::BldDataEBeamV5));
   EBeam.insert( & typeid(Psana::Bld::BldDataEBeamV6));
+  EBeam.insert( & typeid(Psana::Bld::BldDataEBeamV7));
   m_alias2TypesMap["EBeam"] = EBeam;
 
   TypeInfoSet Encoder;
@@ -225,6 +227,7 @@ TypeAliases::TypeAliases() {
   OceanOptics.insert( & typeid(Psana::OceanOptics::ConfigV2));
   OceanOptics.insert( & typeid(Psana::OceanOptics::DataV1));
   OceanOptics.insert( & typeid(Psana::OceanOptics::DataV2));
+  OceanOptics.insert( & typeid(Psana::OceanOptics::DataV3));
   m_alias2TypesMap["OceanOptics"] = OceanOptics;
 
   TypeInfoSet Opal1k;
